--- a/deploy/app.yaml
+++ b/deploy/app.yaml
@@ -1,29 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: k8s-webhook-example
-  namespace: k8s-webhook-example
+  name: k8s-webhook
+  namespace: k8s-webhook
   labels:
-    app: k8s-webhook-example
+    app: k8s-webhook
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: k8s-webhook-example
+      app: k8s-webhook
   template:
     metadata:
       labels:
-        app: k8s-webhook-example
+        app: k8s-webhook
     spec:
       containers:
-        - name: k8s-webhook-example
-          image: slok/k8s-webhook-example:latest
+        - name: k8s-webhook
+          image: slok/k8s-webhook:latest
           imagePullPolicy: Always
           args:
             - --tls-cert-file-path=/etc/webhook/certs/cert.pem
             - --tls-key-file-path=/etc/webhook/certs/key.pem
             - --webhook-label-marks
-            - kubewebhook=k8s-webhook-example
+            - kubewebhook=k8s-webhook
             - --webhook-enable-ingress-single-host
             - --webhook-ingress-host-regex=.*\.valhalla\.slok\.dev
             - --webhook-sm-min-scrape-interval=15s
@@ -46,38 +46,38 @@ spec:
       volumes:
         - name: webhook-certs
           secret:
-            secretName: k8s-webhook-example-certs
+            secretName: k8s-webhook-certs
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: k8s-webhook-example
-  namespace: k8s-webhook-example
+  name: k8s-webhook
+  namespace: k8s-webhook
   labels:
-    app: k8s-webhook-example
+    app: k8s-webhook
 spec:
   ports:
-  - name: http
-    port: 443
-    targetPort: 8080
-  - name: metrics
-    port: 8081
-    targetPort: 8081
+    - name: http
+      port: 443
+      targetPort: 8080
+    - name: metrics
+      port: 8081
+      targetPort: 8081
   selector:
-    app: k8s-webhook-example
+    app: k8s-webhook
 
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app: k8s-webhook-example
+    app: k8s-webhook
     prometheus: prometheus
-  name: k8s-webhook-example
-  namespace: k8s-webhook-example
+  name: k8s-webhook
+  namespace: k8s-webhook
 spec:
   endpoints:
-  - port: metrics
+    - port: metrics
   selector:
     matchLabels:
-      app: k8s-webhook-example
+      app: k8s-webhook
