--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,11 +6,10 @@ jobs:
   check:
     name: Check
     runs-on: ubuntu-latest
-    # Execute the checks inside the contianer instead the VM.
-    container: golangci/golangci-lint:v1.24.0-alpine
     steps:
       - uses: actions/checkout@v1
-      - run: ./scripts/check/check.sh
+      - uses: golangci/golangci-lint:v1.24.0-alpine
+        run: ./scripts/check/check.sh
 
   test:
     name: Test
@@ -19,7 +18,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-go@v2-beta
         with:
-          go-version: 1.14
+          go-version: 1.15
       - run: make ci-test
       - uses: codecov/codecov-action@v1
         with:
