--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,18 @@
 {
   "cSpell.words": [
+    "Debugf",
     "Infof",
     "Kubewebhook",
     "Warningf",
+    "codecov",
     "corev",
+    "gitlab",
+    "gohttpmetrics",
+    "gohttpmetricsprometheus",
+    "golangci",
     "healthz",
+    "kavla",
+    "mdlw",
     "metav",
     "monitoringv",
     "mutatingwh",
@@ -12,6 +20,7 @@
     "oklog",
     "slok",
     "stretchr",
-    "whhttp"
-  ]
+    "whhttp",
+    "whmetrics"
+  ],
 }
