--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,10 +6,10 @@ jobs:
   check:
     name: Check
     runs-on: ubuntu-latest
+    container: golangci/golangci-lint:v1.24.0-alpine
     steps:
       - uses: actions/checkout@v1
-      - uses: golangci/golangci-lint:v1.24.0-alpine
-        run: ./scripts/check/check.sh
+      - run: ./scripts/check/check.sh
 
   test:
     name: Test
