--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,9 +29,9 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     env:
       TAG_IMAGE_LATEST: "true"
-      PROD_IMAGE_NAME: ${GITHUB_REPOSITORY}
+      #PROD_IMAGE_NAME: ${GITHUB_REPOSITORY}
       #PROD_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/app
-      #PROD_IMAGE_NAME: registry.gitlab.com/${GITHUB_REPOSITORY}
+      PROD_IMAGE_NAME: registry.gitlab.com/${GITHUB_REPOSITORY}
     needs: [check, test]
     name: Release image
     runs-on: ubuntu-latest
@@ -46,13 +46,13 @@ jobs:
         run: docker login ${DOCKER_HOST} -u ${DOCKER_USER} -p ${DOCKER_TOKEN}
         env:
           # DockerHub.
-          DOCKER_HOST: ""
-          DOCKER_USER: kavla
-          DOCKER_TOKEN: ${{secrets.DOCKER_HUB_TOKEN}}
+          # DOCKER_HOST: ""
+          # DOCKER_USER: kavla
+          # DOCKER_TOKEN: ${{secrets.DOCKER_HUB_TOKEN}}
           ## Github.
-          # DOCKER_HOST: docker.pkg.github.com
-          # DOCKER_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          # DOCKER_USER: ${GITHUB_ACTOR}
+          DOCKER_HOST: docker.pkg.github.com
+          DOCKER_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          DOCKER_USER: ${GITHUB_ACTOR}
           ## Gitlab.
           # DOCKER_HOST: registry.gitlab.com
           # DOCKER_USER: kav
