--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,5 +59,14 @@ jobs:
           # DOCKER_TOKEN: ${{secrets.GITLAB_TOKEN}}
       - name: Show Env
         run: printenv
+        env:
+          # DockerHub.
+          # DOCKER_HOST: ""
+          # DOCKER_USER: kavla
+          # DOCKER_TOKEN: ${{secrets.DOCKER_HUB_TOKEN}}
+          ## Github.
+          DOCKER_HOST: docker.pkg.github.com
+          DOCKER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_USER: $GITHUB_ACTOR
       - name: Publish image
         run: make publish-image
