--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -71,7 +71,7 @@ jobs:
       - name: Publish image
         env:
           IMAGE: pelotech/templated-configuration-webhook 
-          DOCKER_FILE_PATH: ./docker/prod/Dockerfile 
-          VERSIO: ${VERSION} 
+          DOCKER_FILE_PATH: ./docker/envtemplate/Dockerfile 
+          VERSION: $(shell git describe --tags --always)
         run: ./scripts/build/build-image.sh
       
