--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,6 +72,6 @@ jobs:
         env:
           IMAGE: pelotech/templated-configuration-webhook 
           DOCKER_FILE_PATH: ./docker/envtemplate/Dockerfile 
-          VERSION: ${GITHUB_REF##*/}
+          VERSION: ${{ GITHUB_REF##*/ }}
         run: ./scripts/build/build-image.sh
       
