--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     env:
       TAG_IMAGE_LATEST: "true"
-      PROD_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/app
+      PROD_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/webhook
     needs: [check, test]
     name: Release image
     runs-on: ubuntu-latest
@@ -53,6 +53,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     env: 
       TAG_IMAGE_LATEST: "true"
+      PROD_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/envtemplate
     needs: [check, test]
     name: Release Webhook Image
     runs-on: ubuntu-latest
