--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,7 +53,6 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     env: 
       TAG_IMAGE_LATEST: "true"
-      PROD_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/envtemplate
     needs: [check, test]
     name: Release Webhook Image
     runs-on: ubuntu-latest
@@ -74,7 +73,7 @@ jobs:
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
       - name: Publish image
         env:
-          IMAGE: pelotech/templated-configuration-webhook 
+          IMAGE: docker.pkg.github.com/${GITHUB_REPOSITORY}/envtemplate 
           DOCKER_FILE_PATH: Dockerfile 
           VERSION: ${{ steps.get_version.outputs.VERSION }}
         run: ../../scripts/build/build-image.sh
