--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,7 +53,6 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     env: 
       TAG_IMAGE_LATEST: "true"
-      IMAGE: docker.pkg.github.com/${GITHUB_REPOSITORY}/envtemplate
     needs: [check, test]
     name: Publish envtemplate
     runs-on: ubuntu-latest
@@ -76,6 +75,7 @@ jobs:
         env:
           DOCKER_FILE_PATH: Dockerfile 
           VERSION: ${{ steps.get_version.outputs.VERSION }}
+          IMAGE: docker.pkg.github.com/${{GITHUB_REPOSITORY}}/envtemplate
         run: ../../scripts/build/build-image.sh
         working-directory: ./docker/envtemplate
       
