--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     env:
       TAG_IMAGE_LATEST: "true"
-      PROD_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/webhook
+      WEBHOOK_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/webhook
     needs: [check, test]
     name: Publish webhook
     runs-on: ubuntu-latest
@@ -53,7 +53,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     env:
       TAG_IMAGE_LATEST: "true"
-      PROD_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/envtemplate
+      ENVTEMPLATE_IMAGE_NAME: docker.pkg.github.com/${GITHUB_REPOSITORY}/envtemplate
     needs: [check, test]
     name: Publish envtemplate
     runs-on: ubuntu-latest
